backend/check.log
    Checking poool-backend v0.1.0 (/Users/martin/Projects/poool/backend)
warning: unused import: `Html`
   --> src/marketplace/routes.rs:290:26
    |
290 |     use axum::response::{Html, Redirect};
    |                          ^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/assets/routes.rs:290:9
    |
290 |     let mut similar_display: Vec<PropertyDisplayData> = similar_assets
    |         ----^^^^^^^^^^^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0277]: `std::option::Option<Uuid>` doesn't implement `std::fmt::Display`
   --> src/rewards/service.rs:695:5
    |
695 | /     tracing::info!(
696 | |         affiliate_id = %referral.affiliate_id,
697 | |         referred_user = %user_id,
698 | |         commission_cents = commission_cents,
699 | |         "Affiliate commission tracked (provisionally)"
700 | |     );
    | |     ^
    | |     |
    | |_____the trait `std::fmt::Display` is not implemented for `std::option::Option<Uuid>`
    |       required by a bound introduced by this call
    |
    = note: required for `&std::option::Option<Uuid>` to implement `std::fmt::Display`
note: required by a bound in `display`
   --> /Users/martin/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/tracing-core-0.1.36/src/field.rs:370:8
    |
368 | pub fn display<T>(t: T) -> DisplayValue<T>
    |        ------- required by a bound in this function
369 | where
370 |     T: fmt::Display,
    |        ^^^^^^^^^^^^ required by this bound in `display`
    = note: this error originates in the macro `$crate::valueset_all` which comes from the expansion of the macro `tracing::info` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `std::option::Option<Uuid>` doesn't implement `std::fmt::Display`
   --> src/rewards/service.rs:695:5
    |
695 | /     tracing::info!(
696 | |         affiliate_id = %referral.affiliate_id,
697 | |         referred_user = %user_id,
698 | |         commission_cents = commission_cents,
699 | |         "Affiliate commission tracked (provisionally)"
700 | |     );
    | |_____^ the trait `std::fmt::Display` is not implemented for `std::option::Option<Uuid>`
    |
    = note: required for `&std::option::Option<Uuid>` to implement `std::fmt::Display`
note: required by a bound in `DisplayValue`
   --> /Users/martin/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/tracing-core-0.1.36/src/field.rs:360:28
    |
360 | pub struct DisplayValue<T: fmt::Display>(T);
    |                            ^^^^^^^^^^^^ required by this bound in `DisplayValue`
    = note: this error originates in the macro `$crate::valueset_all` which comes from the expansion of the macro `tracing::info` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `std::option::Option<Uuid>` doesn't implement `std::fmt::Display`
   --> src/rewards/service.rs:695:5
    |
695 | /     tracing::info!(
696 | |         affiliate_id = %referral.affiliate_id,
697 | |         referred_user = %user_id,
698 | |         commission_cents = commission_cents,
699 | |         "Affiliate commission tracked (provisionally)"
700 | |     );
    | |_____^ the trait `std::fmt::Display` is not implemented for `std::option::Option<Uuid>`
    |
help: the trait `tracing::Value` is implemented for `DisplayValue<T>`
   --> /Users/martin/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/tracing-core-0.1.36/src/field.rs:719:1
    |
719 | / impl<T> Value for DisplayValue<T>
720 | | where
721 | |     T: fmt::Display,
    | |____________________^
    = note: required for `&std::option::Option<Uuid>` to implement `std::fmt::Display`
    = note: required for `DisplayValue<&std::option::Option<Uuid>>` to implement `tracing::Value`
    = note: required for the cast from `&DisplayValue<&std::option::Option<Uuid>>` to `&dyn tracing::Value`
    = note: this error originates in the macro `$crate::valueset_all` which comes from the expansion of the macro `tracing::info` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `unwrap_or_default` found for struct `std::string::String` in the current scope
   --> src/rewards/service.rs:865:85
    |
865 |         "referral_url": format!("https://app.poool.com/r/{}", profile.referral_code.unwrap_or_default()),
    |                                                                                     ^^^^^^^^^^^^^^^^^ method not found in `std::string::String`

warning: unused import: `redis::AsyncCommands`
   --> src/community/user_bridge.rs:168:21
    |
168 |                 use redis::AsyncCommands;
    |                     ^^^^^^^^^^^^^^^^^^^^

warning: value assigned to `is_completed` is never read
  --> src/community/challenges.rs:96:13
   |
96 |             is_completed = true;
   |             ^^^^^^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `land_sqm`
   --> src/cart/routes.rs:597:13
    |
597 |         let land_sqm: Option<f64> = row.get("land_size_sqm");
    |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_land_sqm`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `item_count`
   --> src/cart/routes.rs:994:9
    |
994 |     let item_count = rows.len();
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_item_count`

warning: unused variable: `core_pool`
  --> src/community/background.rs:18:42
   |
18 | async fn check_velocity(c_pool: &PgPool, core_pool: &PgPool) -> Result<(), crate::error::AppError> {
   |                                          ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_core_pool`

warning: unused variable: `only_following_user_id`
   --> src/community/routes.rs:280:9
    |
280 |     let only_following_user_id: Option<Uuid> = None; // not constrained by following
    |         ^^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_only_following_user_id`

warning: unused variable: `user`
    --> src/community/routes.rs:2116:9
     |
2116 |     let user = middleware::get_current_user(&jar, &state.db).await;
     |         ^^^^ help: if this is intentional, prefix it with an underscore: `_user`

warning: unused variable: `q`
    --> src/community/routes.rs:3018:26
     |
3018 |     axum::extract::Query(q): axum::extract::Query<std::collections::HashMap<String, String>>,
     |                          ^ help: if this is intentional, prefix it with an underscore: `_q`

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `poool-backend` (bin "poool-backend") generated 10 warnings
error: could not compile `poool-backend` (bin "poool-backend") due to 6 previous errors; 10 warnings emitted
